# cpp_novice_template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  README_install_thirdparty_libraries.md  conanfile.txt  cpp_novice.code-profile  vcpkg.json  请读我.md  请读我_安装第三方库.md
cmake/: README.md  add_code.cmake  add_program.cmake  check_latest_cppstd.cmake  cpp_novice_custom_project_options.cmake  cpp_novice_fetch_project_options.cmake  detect_std_module.cmake  enable_cpp_module.cmake  enable_customized_project_options.cmake  fetch_project_options.cmake  fix_msvc.cmake  fltk.cmake  ppp_check_compiler.cmake  qt.cmake
include/: add.hpp
src/example_gui/: Gui.cpp  Gui.h  Main.cpp  Window.h  main.cpp
src/example_multiple/: hello.cpp  hello.hpp  main.cpp
src/example_single/: main.cpp
support/: CMakeLists.txt
support/graph_lib/: CMakeLists.txt
support/graph_lib/fake_include/: Simple_window.h
support/graph_lib/include/: GUI.h  GUI_private.h  Graph.h  Image_private.h  Point.h  Simple_window.h  Window.h
support/graph_lib/src/: Colormap.cpp  GUI.cpp  Graph.cpp  Simple_window.cpp  Window.cpp
support/ppp/: CMakeLists.txt
support/ppp/include/: PPP.h  PPP_support.inc  PPPheaders.h  std_lib_facilities.h
support/ppp/src/: PPP.ixx
support/wrapped_fltk/: CMakeLists.txt
support/wrapped_fltk/fake_include/: fltk.h
support/wrapped_fltk/include/: fltk.h
support/wrapped_qt/: CMakeLists.txt
support/wrapped_qt/fake_include/: QPushButton  config-inl.h
support/wrapped_qt/include/: QHBoxLayout
test/: main.cpp
